2024-03-02T00:27:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8118879702 # 165
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 164 229 / 165 230
* notice: next accum: outdated-unq outdated-all / unq all: 165 230 / 166 231
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-04] / [2024-03-01]

2024-02-07T00:26:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7808029380 # 93
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 163 228 / 165 230
* notice: next accum: outdated-unq outdated-all / unq all: 164 229 / 165 230
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-23] / []

2024-02-05T00:29:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7777883498 # 87
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 163 228 / 164 229
* notice: next accum: outdated-unq outdated-all / unq all: 163 228 / 165 230
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-04]

2024-01-30T08:07:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7708065652 # 70